syntax = "proto3";

package rivet.backend.pkg.mm.lobby_list_for_user_id;

import "legacy/proto/common.proto";

message Request {
	repeated rivet.common.Uuid user_ids = 1;
}

message Response {
	message User {
		rivet.common.Uuid user_id = 1;
		repeated rivet.common.Uuid lobby_ids = 2;
	}

	repeated User users = 1;
}
